--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "script.js",
   "scripts": {
     "devStart": "nodemon server.js",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
